tests/negative/gold/empty_block_eos_test.gold
tests/negative/empty_block_eos_test.toit:5:8: error: Empty blocks are not allowed
    foo:
       ^
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/empty_block_eos_test.toit'
Compilation failed.
